# algcmp

./: .gitignore  Bit_manipulation.md  Cargo.toml  Computational_geometry.md  Data_structure.md  Iteration.md  Number_theory.md  Permutation.md  README.md  cppreference_print.html  cppreference_print_colored.html  cppreference_zh_print.html  main.cpp  original_template.cpp
contents/: Binary_search.md  Bit_manipulation.md  Computational_geometry.md  Conversion.md  Data_structure.md  IO.md  Input.md  Iteration.md  Permutation.md  Sorting.md  View.md
cppreference/: std::array.html  std::atan2.html  std::bit_width.html  std::bitset.html  std::cos.html  std::count.html  std::countr_zero.html  std::find.html  std::gcd.html  std::getline.html  std::has_single_bit.html  std::hypot.html  std::lcm.html  std::midpoint.html  std::next_permutation.html  std::numbers::pi_v.html  std::optional.html  std::partial_sum.html  std::priority_queue.html  std::ranges::count.html  std::ranges::max_element.html  std::ranges::minmax.html  std::ranges::unique.html  std::ranges::views::single.html  std::set.html  std::sin.html  std::tan.html  std::tuple.html  std::unordered_map.html  std::unordered_set.html  std::vector.html
src/: commands.rs  errors.rs  html.rs  main.rs  references.rs  utils.rs
src/commands/: download.rs  mod.rs  print.rs
src/errors/: mod.rs
src/html/: processing.rs
src/utils/: mod.rs
templates/: .clang-format
templates/src/: Main.java  main.cpp  main.py  main.rs
