[package]
name = "algcmp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.9"
log = "0.4.29"
markup5ever = "0.36.1"
regex = "1.12.3"
reqwest = "0.13.2"
scraper = "0.25.0"
thiserror = "2.0.18"
tokio = "1.49.0"
